Changes since 4.0
-------------------

* [HTTPCORE-191] Blocking HTTP connections are now capable of correctly preserving their internal 
  state on SocketTimeoutExceptions, which makes it possible to continue reading from the connection 
  after a socket timeout.
  Contributed by Oleg Kalnichevski <olegk at apache.org> 

* [HTTPCORE-190] ChunkedInputStream is now capable of correctly preserving its internal state on 
  SocketTimeoutExceptions, which makes it possible to continue reading from the stream after a 
  socket timeout.
  Contributed by Oleg Kalnichevski <olegk at apache.org> 

Release 4.0
-------------------

This is the first stable (GA) release of HttpCore 4.0. This release mainly improves the 
documentation and fixes a few minor bugs reported since the previous release. HttpCore
now comes with a complete tutorial presenting an in-depth coverage of the API.

HttpCore is a set of low level HTTP transport components that can be used to build custom
client and server side HTTP services with a minimal footprint. HttpCore supports two I/O 
models: blocking I/O model based on the classic Java I/O and non-blocking, event driven I/O 
model based on Java NIO.  The blocking I/O model may be more appropriate for data intensive, 
low latency scenarios, whereas the non-blocking model may be more appropriate for high latency 
scenarios where raw data throughput is less important than the ability to handle thousands of 
simultaneous HTTP connections in a resource efficient manner.

* [HTTPCORE-180] Fixed NPE in standard I/O event dispatchers when 
  IOEventDispatch#disconnected fires before the session was fully initialized 
  (IOEventDispatch#connected was not called).
  Contributed by Oleg Kalnichevski <olegk at apache.org> 

* [HTTPCORE-175] Chunk decoders no longer accept truncated chunks as valid input.
  Contributed by Oleg Kalnichevski <olegk at apache.org> 


Release 4.0 Beta 3
-------------------
